[package]
name = "rustyrocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
palette = "*"
bevy_tweening = { version= "0.8" }
bevy_asset_loader = { version = "*", features = ["2d"] }
bevy-inspector-egui = "*"
bevy_rapier2d = "0.22.0"
fastrand = "2.0.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
