[package]
name = "rustyrocket"
version = "0.1.0"
edition = "2021"
default-run = "rustyrocket"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["dynamic_linking"] }
palette = "*"
bevy_tweening = { version= "0.9" }
bevy_asset_loader = { version = "0.18", features = ["2d"] }
bevy-inspector-egui = "0.21"
bevy_rapier2d = "0.23.0"
rand = "0.8.5"
anyhow = "*"
serde = "*"
ron = "*"
thiserror = "*"
futures-lite = "1.13.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
